--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sharp",
   "description": "High performance Node.js image processing, the fastest module to resize JPEG, PNG, WebP and TIFF images",
-  "version": "0.26.2",
+  "version": "0.27.0-alpha1",
   "author": "Lovell Fuller <npm@lovell.info>",
   "homepage": "https://github.com/lovell/sharp",
   "contributors": [
@@ -99,6 +99,7 @@
     "jpeg",
     "png",
     "webp",
+    "avif",
     "tiff",
     "gif",
     "svg",
@@ -112,7 +113,7 @@
     "vips"
   ],
   "dependencies": {
-    "color": "^3.1.2",
+    "color": "^3.1.3",
     "detect-libc": "^1.0.3",
     "node-addon-api": "^3.0.2",
     "npmlog": "^4.1.2",
@@ -130,7 +131,7 @@
     "exif-reader": "^1.0.3",
     "icc": "^2.0.0",
     "license-checker": "^25.0.1",
-    "mocha": "^8.1.1",
+    "mocha": "^8.2.0",
     "mock-fs": "^4.13.0",
     "nyc": "^15.1.0",
     "prebuild": "^10.0.1",
@@ -139,7 +140,7 @@
   },
   "license": "Apache-2.0",
   "config": {
-    "libvips": "8.10.0",
+    "libvips": "8.10.2-alpha2",
     "runtime": "napi",
     "target": 3
   },
