--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "detect-libc": "^1.0.3",
     "node-addon-api": "^3.0.2",
     "npmlog": "^4.1.2",
-    "prebuild-install": "^5.3.5",
+    "prebuild-install": "prebuild/prebuild-install#npm7",
     "semver": "^7.3.2",
     "simple-get": "^4.0.0",
     "tar-fs": "^2.1.0",
